--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "form": "^0.2.5",
+    "imagekitio-next": "^1.0.1",
     "input": "^1.0.1",
     "label": "^0.2.2",
     "lucide-react": "^0.474.0",
